# libtorch_train_slow_in_xavier

./: 2cpp.py  CMakeLists.txt  README.md  main.cpp  pytorch_jit.py  pytorch_origin.py
